vlib/v/checker/tests/match_ranges_not_same_cast_err.out
vlib/v/checker/tests/match_ranges_not_same_cast_err.vv:6:2: error: the low and high parts of a range expression, should have matching types
    4 | c := u16(3)
    5 | match c {
    6 |     a...b { println('1...5') }
      |     ~~~~~
    7 |     else { println('not 1...5') }
    8 | }
Details: 
 low part type: u16
high part type: u8
